add controls to liveroom

--- a/css/liveroom.css
+++ b/css/liveroom.css
@@ -281,7 +281,7 @@ video {
     -ms-flex: 1;
     flex: 1;
     position: relative;
-    padding: 0 4px;
+    /*padding: 0 4px;*/
     background: #e7e7e7;
     background-clip: content-box;
     border-radius: 2px;
@@ -626,6 +626,8 @@ video {
     margin-left: 25px;
     height: 25px;
     width: 40px;
+    padding: 0;
+    text-align: center;
 }
 
 .button{
