--- a/css/setting.css
+++ b/css/setting.css
@@ -24,9 +24,12 @@ a{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-top: 100px;
     position: relative;
     align-items: center;
+}
+
+.setting-group:first-child{
+    padding-top: 100px;
 }
 
 .setting-sub-group{
@@ -53,7 +56,6 @@ a{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 20px;
 }
 
 .setting-item-text div{
@@ -67,10 +69,6 @@ a{
 .setting-item-description{
     font-size: 12px;
     color: var(--text-gray);
-}
-
-.setting-item-switch{
-    margin-right: 20px;
 }
 
 #rua-icon-host{
@@ -271,6 +269,7 @@ a{
 
 .medal{
     display: inline-block;
+    height: 30px;
 }
 
 /*.medal-section{*/
@@ -350,6 +349,61 @@ a{
 /*.button-host{*/
 /*    margin-left: 20px;*/
 /*}*/
+
+.item-left-side, .item-right-side{
+    display: flex;
+}
+
+.item-left-side{
+    margin-left: 20px;
+}
+
+.item-right-side{
+    margin-right: 20px;
+}
+
+.selection{
+    padding: 0 5px;
+    margin: 15px 25px 0;
+    border: 0;
+    border-bottom: 2px solid var(--bili-brand);
+    scrollbar-width: thin;
+    outline: 0!important;
+    transition: .4s;
+    -webkit-transition: .4s;
+    height: 25px;
+    background-color: var(--background);
+}
+
+.setting-item-input{
+    margin-left: 30px;
+    margin-right: 25px;
+}
+
+.setting-item-input input{
+    border-bottom: 1px solid var(--bili-brand);
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    width: 100%;
+    transition: .2s;
+    background: var(--background);
+    line-height: 25px;
+    margin-top: 12px;
+    min-width: 165px;
+}
+
+.setting-item-input input:focus-visible {
+    border-bottom: 3px solid var(--bili-brand);
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    outline: none;
+}
+
+.setting-second-level-group{
+    margin: 0 0 0 30px;
+}
 
 @media (prefers-color-scheme: dark) {
     :root{
